# server/model/domain/container.go
@@ -1,0 +1,7 @@
+package domain
+
+type Container struct {
+	UserId    int64
+	GroupName string
+	Priority  int8
+}
